# LearnCMake

./: README.md
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/inc/: my_math.cpp
lab4/: CMakeLists.txt
